syntax = "proto3";
import "portfolio.proto";

option java_multiple_files = true;
option java_package = "com.example.market.grpc";
option java_outer_classname = "PortfolioHistoryProto";

package market;


message PortfolioHistoryItem {
  string date = 1;
  string currentValue = 2;
  string investedValue =3;
}

// ====== RESPONSES ======

message PortfolioHistoryResponse {
  repeated PortfolioHistoryItem items = 7;
}

// ====== SERVICE ======

service PortfolioHistoryService {
  rpc GetPortfolioHistory(PortfolioRequest) returns (PortfolioHistoryResponse);
}
